unpackaged/main/default/objects/Webcasts_Survey_Results__c/Webcasts_Survey_Results__c.object-meta.xml
<CustomObject>
    <label>Webcasts Survey Results</label>
    <nameField>
        <label>Webcasts Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webcast Surveys Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>