unpackaged/main/default/objects/Webcasts_Survey_Results__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>