unpackaged/main/default/objects/Webcasts_Survey_Results__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webcast Surveys Results</relationshipLabel>
    <relationshipName>Webcast_Surveys_Results</relationshipName>
    <type>Lookup</type>
</CustomField>