unpackaged/main/default/objects/Webcasts_Survey_Results__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webcast Surveys Results</relationshipLabel>
    <relationshipName>Webcast_Surveys_Results</relationshipName>
    <type>Lookup</type>
</CustomField>