unpackaged/main/default/objects/Webcasts_Survey_Results__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>